Replace some RuntimeException with ResponseStatusException to throw proper error to user and also find warnings using SonarQube and solve that.